# chatbot

./: .gitignore  CLAUDE.md  README.md
project/backend/: .env  .env.example  LOCAL_SETUP.md  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
project/backend/app/: config.py  database.py  main.py
project/backend/app/agents/: __init__.py  base.py  validation_agent.py
project/backend/app/middleware/: __init__.py  error_handling.py  logging.py
project/backend/app/repositories/: __init__.py  account_mapping_repository.py  audit_repository.py  base.py  contract_repository.py  correction_repository.py  extraction_repository.py  state_rule_repository.py  user_repository.py
project/backend/app/schemas/: __init__.py  requests.py  responses.py
project/backend/app/services/: audit_service.py  chat_service.py  contract_service.py  extraction_service.py  llm_service.py  s3_service.py
project/backend/app/utils/: cache.py
project/backend/database/: README.md  schema.sql  seed_data.sql
project/backend/database/docs/: ER-diagram.md  data-dictionary.md
project/backend/database/migrations/: README.md  add_v2_audit_event_types.sql
project/backend/database/seed/: seed_data.sql
project/backend/scripts/: seed_db.py  setup_s3.py
project/backend/test_pdfs/: README.md
project/backend/tests/: conftest.py  factories.py  test_main.py
project/backend/tests/e2e/: test_state_rules_admin.py  test_state_validation_multi_state.py  test_state_validation_single_state.py
project/backend/tests/integration/: test_admin_api.py  test_contracts_api.py  (+3 more)
(+217 files in other folders)
