[project]
name = "contract-refund-backend"
version = "1.0.0"
description = "AI-powered contract extraction and review system"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "python-multipart==0.0.6",
    "sqlalchemy==2.0.25",
    "alembic==1.13.1",
    "psycopg2-binary==2.9.9",
    "asyncpg==0.29.0",
    "greenlet==3.0.3",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    "email-validator==2.1.0",
    "httpx==0.26.0",
    "redis==5.0.1",
    "boto3==1.35.0",
    "openai==1.54.5",
    "anthropic==0.39.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.4",
    "pytest-asyncio==0.23.3",
    "pytest-cov==4.1.0",
    "pytest-mock==3.12.0",
    "black==24.1.1",
    "ruff==0.1.15",
    "mypy==1.8.0",
    "python-dotenv==1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
